# art

./: .dockerignore  .env.example  .gitignore  .project-memory.md  Dockerfile  config.json.example  docker-compose.yml  main.py  pyproject.toml  smoke_role_task.py
.github/workflows/: ci.yml
docs/: Art-Executive-Brief.md  Art_立项PPT_guizang.html  Art立项PPT.pptx  Art立项PPT_updated.pptx  CONTRIBUTING.md  SPRINT-PLAN.md  beta-test-report.json  beta-test-report.md  git-workflow.md  mvp-integration-test-report.md  python-agent-architecture.md
docs/planning/: product-roadmap.md  research-report.md  technical-plan.md
migrations/: 001_initial.sql
scripts/: backup.py  beta_test.py
src/domain/: intent.py
src/llm/: __init__.py  base.py  glm.py  intent_parser.py  minimax.py
src/models/: __init__.py  role.py  role_task.py  task.py  wechat_message.py  wechat_push_log.py
src/observability/: __init__.py  health.py  metrics.py
src/schemas/: __init__.py  role.py  role_task.py  task.py
src/services/: __init__.py  intent.py  role.py  role_task.py  task.py  wechat_message.py  wechat_push.py
src/storage/: database.py  wechat_message.py  wechat_push_log.py
src/utils/: config.py  security.py
src/worker/: __init__.py  mcp_client.py
tests/: pre_beta_self_test.py
tests/fixtures/: intent_golden_dataset.json
tests/integration_tests/: test_mvp_integration.py  test_wechat_task_flow.py
tests/unit_tests/: test_backup.py  test_blocker_fixes.py  test_health_metrics.py  test_intent_parser.py  test_mcp_client.py  (+7 more)
web/: package-lock.json  package.json  vite.config.js
(+22 files in other folders)
